--- a/bwm/a4.tex
+++ b/bwm/a4.tex
@@ -20,7 +20,7 @@
 	\vspace{\dimexpr-2\parsep-2\parskip\relax}
 }
 
-In allen folgenden Diagrammen steht eine gestrichelte Linie für eine Symmetrieachse, magenta und türkis markierte Felder sind ausgemalt, wobei der Anfänger die Farbe magenta hat.
+In allen folgenden Diagrammen steht eine gestrichelte Linie für eine Symmetrieachse. Magenta und türkis markierte Felder sind ausgemalt, wobei der Anfänger die Farbe Magenta hat.
 \\[10pt]
 Läuft das Spiel zuletzt auf eine $2\times2$-Ecke hinaus, verliert der Spieler, der zuerst in dieses Feld malen muss:
 \begin{center}
@@ -191,7 +191,7 @@ Läuft das Spiel auf eine "Hufeisenform" hinaus, verliert auch wieder der Spiele
 	\draw [dashed] (3.5,0) -- (3.5,5);
 \end{tikzpicture}
 \\
-Erhard muss anfangen und Renate kopiert solange seine Spielzüge auf der jeweils anderen Seite der Spiegelachse, bis Erhard zum ersten mal ein Feld ausmalt, das die obere Kante berührt oder in dieser liegt. Dann kann Renate Erhard in eine $p\times p$-Ecke zwingen und Renate gewinnt (wie oben bewiesen).
+Erhard muss anfangen und Renate kopiert solange seine Spielzüge auf der jeweils anderen Seite der Spiegelachse, bis Erhard zum ersten Mal ein Feld ausmalt, das die obere Kante berührt oder in dieser liegt. Dann kann Renate Erhard in eine $p\times p$-Ecke zwingen und Renate gewinnt (wie oben bewiesen).
 \pagebreak
 
 Renate hat nun für zwei verschiedene Arten von Feldern Strategien:
