Unnötige orange Markierungen in A4 weggemacht

--- a/bwm/a4.tex
+++ b/bwm/a4.tex
@@ -204,17 +204,17 @@ Hierfür beginnt Renate mit dem Ausmalen eines einzelnen Feldes E in einer Ecke.
 Ab dem zweiten Diagramm macht pro Bild immer erst Erhard (türkis) einen Zug, dann Renate (magenta):
 \begin{NMCenter}
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\draw (1,1) \Ecke;
-	\draw (2,1) \Ecke;
-	\draw (3,1) \Ecke;
-	\draw (4,1) \Ecke;
-	\draw (5,1) \Ecke;
-	\draw (6,1) \Ecke;
-	\draw (6,2) \Ecke;
-	\draw (6,3) \Ecke;
-	\draw (6,4) \Ecke;
-	\draw (6,5) \Ecke;
-	\draw (6,6) \Ecke;
+	\draw (1,1) \Feld;
+	\draw (2,1) \Feld;
+	\draw (3,1) \Feld;
+	\draw (4,1) \Feld;
+	\draw (5,1) \Feld;
+	\draw (6,1) \Feld;
+	\draw (6,2) \Feld;
+	\draw (6,3) \Feld;
+	\draw (6,4) \Feld;
+	\draw (6,5) \Feld;
+	\draw (6,6) \Feld;
 
 	\draw (5,6) \Feld;
 	\draw (4,6) \Feld;
@@ -231,17 +231,17 @@ Ab dem zweiten Diagramm macht pro Bild immer erst Erhard (türkis) einen Zug, da
 	\node[anchor=west] at (6.5,3.5) {$\rightarrow$};
 \end{tikzpicture}
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\draw (1,1) \Ecke;
-	\draw (2,1) \Ecke;
-	\draw (3,1) \Ecke;
-	\draw (4,1) \Ecke;
-	\draw (5,1) \Ecke;
-	\draw (6,1) \Ecke;
-	\draw (6,2) \Ecke;
-	\draw (6,3) \Ecke;
-	\draw (6,4) \Ecke;
-	\draw (6,5) \Ecke;
-	\draw (6,6) \Ecke;
+	\draw (1,1) \Feld;
+	\draw (2,1) \Feld;
+	\draw (3,1) \Feld;
+	\draw (4,1) \Feld;
+	\draw (5,1) \Feld;
+	\draw (6,1) \Feld;
+	\draw (6,2) \Feld;
+	\draw (6,3) \Feld;
+	\draw (6,4) \Feld;
+	\draw (6,5) \Feld;
+	\draw (6,6) \Feld;
 
 	\draw (5,6) \Feld;
 	\draw (4,6) \Feld;
@@ -258,17 +258,17 @@ Ab dem zweiten Diagramm macht pro Bild immer erst Erhard (türkis) einen Zug, da
 	\node[anchor=west] at (6.5,3.5) {$\rightarrow$};
 \end{tikzpicture}
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\draw (1,1) \Ecke;
-	\draw (2,1) \Ecke;
-	\draw (3,1) \Ecke;
-	\draw (4,1) \Ecke;
-	\draw (5,1) \Ecke;
-	\draw (6,1) \Ecke;
-	\draw (6,2) \Ecke;
-	\draw (6,3) \Ecke;
-	\draw (6,4) \Ecke;
-	\draw (6,5) \Ecke;
-	\draw (6,6) \Ecke;
+	\draw (1,1) \Feld;
+	\draw (2,1) \Feld;
+	\draw (3,1) \Feld;
+	\draw (4,1) \Feld;
+	\draw (5,1) \Feld;
+	\draw (6,1) \Feld;
+	\draw (6,2) \Feld;
+	\draw (6,3) \Feld;
+	\draw (6,4) \Feld;
+	\draw (6,5) \Feld;
+	\draw (6,6) \Feld;
 
 	\draw (5,6) \Feld;
 	\draw (4,6) \RenateZug;
