Versuch einer Erklärung bezüglich warum MC/ME die Winkelhalbierenden ihrer jeweiligen Halbkreissektoren sind

--- a/bwm/a3.tex
+++ b/bwm/a3.tex
@@ -55,6 +55,8 @@ Hierfür relevante Punkte und Strecken:
 		\pic [draw,"$\beta$",angle eccentricity=1.7]{angle = e--m--p};
 	\end{tikzpicture}
 \end{center}
+% diese erklärung ist nicht gut das muss besser irgendwie besser gehen (auch egal weil es die beim bwm eh nicht zu sehen bekommen, gibt glaub ich auch punktabzug :c)
+Die Strecke $ME$ halbiert exakt den Kreissektor, weil der Mittelpunkt des Kreises $k_a$ exakt zwischen $M$ und $E$ liegt, also auf $ME$. Das liegt wiederum daran, dass $k_a$ maximal groß sein soll, aber $MB$ und $MP$ in genau einem Punkt berühren soll. Um maximal groß zu sein, ``wächst`` er also symmetrisch zu der Winkelhalbiernden in seinem Kreissektor, also symmetrisch zu der Strecke $ME$.
 \begin{align*}
 	m_{AE} &= \frac{\Delta y}{\Delta x} = \frac{h}{2R-x} \\
 	\frac{h}{R} = \frac{r}{R-r} \leftrightarrow h &= \frac{Rr}{R-r} \tag{1}
@@ -195,7 +197,7 @@ Hierfür relevante Punkte und Strecken:
 		\pic [draw,angle eccentricity=1]{right angle = c--c_--m};
 	\end{tikzpicture}
 \end{center}
-
+(Fall hier analog zur Herleitung von $m_{AE}$, siehe Erklärung oben)
 \begin{align*}
 	m_{CD} &= \frac{\Delta y}{\Delta x} = \frac{h+r}{-x}
 \end{align*}
